--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -50,7 +50,7 @@ jobs:
             - name: Download artifacts
               uses: actions/download-artifact@v4
               with:
-                name: tipicord-*
+                pattern: tipicord-*
                 path: binaries
                 merge-multiple: true
 
