--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -35,7 +35,7 @@ jobs:
                 go-version: 1.23.2
 
             - name: Build
-              run: GOARCH=${{ matrix.arch }} GOOS=${{ matrix.os }} go build -o tipicord-${{ matrix.os }}-${{ matrix.arch }}
+              run: CGO_ENABLED=1 GOARCH=${{ matrix.arch }} GOOS=${{ matrix.os }} go build -o tipicord-${{ matrix.os }}-${{ matrix.arch }}
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
