--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -35,7 +35,10 @@ jobs:
                 go-version: 1.23.2
 
             - name: Build
-              run: CGO_ENABLED=1 GOARCH=${{ matrix.arch }} GOOS=${{ matrix.os }} go build -o tipicord-${{ matrix.os }}-${{ matrix.arch }}
+              run: go build -o tipicord-${{ matrix.os }}-${{ matrix.arch }}
+              env:
+                GOARCH: ${{ matrix.arch }}
+                GOOS: ${{ matrix.os }}
 
             - name: Upload artifact
               uses: actions/upload-artifact@v4
