--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -18,7 +18,6 @@ jobs:
             - name: Get tag
               id: tag
               run: echo "name=$(cat internal/assets/version)-beta.${{ github.event.inputs.alpha }}" >> $GITHUB_OUTPUT
-
     
     build:
         runs-on: ubuntu-latest
@@ -45,6 +44,34 @@ jobs:
               with:
                 name: tipicord-${{ matrix.os }}-${{ matrix.arch }}
                 path: tipicord-${{ matrix.os }}-${{ matrix.arch }}
+
+    build-docker:
+      needs: [get-tag, build]
+      runs-on: ubuntu-latest
+      steps:
+        - name: Checkout
+          uses: actions/checkout@v4
+
+        - name: Set up QEMU
+          uses: docker/setup-qemu-action@v3
+        
+        - name: Set up Docker Buildx
+          uses: docker/setup-buildx-action@v3
+        
+        - name: Login to GitHub Container Registry
+          uses: docker/login-action@v3
+          with:
+            registry: ghcr.io
+            username: ${{ github.repository_owner }}
+            password: ${{ secrets.GITHUB_TOKEN }}
+
+        - name: Build and push
+          uses: docker/build-push-action@v6
+          with:
+            context: .
+            push: true
+            platforms: linux/arm64, linux/amd64
+            tags: ghcr.io/${{ github.repository_owner }}/tipicord:${{ needs.get-tag.outputs.tag }}
 
     beta-release:
         needs: [get-tag, build]
