--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -74,7 +74,7 @@ jobs:
             tags: ghcr.io/${{ github.repository_owner }}/tipicord:${{ needs.get-tag.outputs.tag }}
 
     alpha-release:
-        needs: [get-tag, build]
+        needs: [get-tag, build, build-docker]
         runs-on: ubuntu-latest
         steps:
             - name: Download artifacts
