--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
             tags: ghcr.io/${{ github.repository_owner }}/tipicord:${{ needs.get-tag.outputs.tag }}, ghcr.io/${{ github.repository_owner }}/tipicord:latest
 
     release:
-        needs: [get-tag, build]
+        needs: [get-tag, build, build-docker]
         runs-on: ubuntu-latest
         steps:
             - name: Download artifacts
