--- a/.env.example
+++ b/.env.example
@@ -2,5 +2,5 @@ DISCORD=your-discord-token
 RUNTIPI=runtipi-server-url
 JWT_SECRET=your-jwt-secret
 APPSTORE=https://github.com/runtipi/runtipi-appstore
-DB_PATH=/data/tipicord.db
+DB_PATH=/data/tipimate.db
 REFRESH=30
