--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,90 +1,136 @@
 name: Release
 on:
-    workflow_dispatch:
-            
+  workflow_dispatch:
+  push:
+    tags:
+      - "v*"
+
 jobs:
-    get-tag:
-        runs-on: ubuntu-latest
-        outputs:
-            tag: ${{ steps.tag.outputs.name }}
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-            
-            - name: Get tag
-              id: tag
-              run: echo "name=$(cat internal/assets/version)" >> $GITHUB_OUTPUT
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-    
-    build:
-        runs-on: ubuntu-latest
-        strategy:
-            matrix:
-                arch: [amd64, arm64]
-                os: [linux]
-        steps:
-            - name: Checkout code
-              uses: actions/checkout@v4
-            
-            - uses: actions/setup-go@v5
-              with:
-                go-version: 1.23.2
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/tipimate
 
-            - name: Build
-              run: go build -o tipimate-${{ matrix.os }}-${{ matrix.arch }}
-              env:
-                GOARCH: ${{ matrix.arch }}
-                GOOS: ${{ matrix.os }}
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Upload artifact
-              uses: actions/upload-artifact@v4
-              with:
-                name: tipimate-${{ matrix.os }}-${{ matrix.arch }}
-                path: tipimate-${{ matrix.os }}-${{ matrix.arch }}
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-    build-docker:
-      needs: [get-tag, build]
-      runs-on: ubuntu-latest
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v4
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        id: build
+        with:
+          platforms: linux/amd64
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/${{ github.repository_owner }}/tipimate
+          outputs: type=image,push-by-digest=true,name-canonical=true,push=true
 
-        - name: Set up QEMU
-          uses: docker/setup-qemu-action@v3
-        
-        - name: Set up Docker Buildx
-          uses: docker/setup-buildx-action@v3
-        
-        - name: Login to GitHub Container Registry
-          uses: docker/login-action@v3
-          with:
-            registry: ghcr.io
-            username: ${{ github.repository_owner }}
-            password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Export digest
+        run: |
+          mkdir -p ${{ runner.temp }}/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
 
-        - name: Build and push
-          uses: docker/build-push-action@v6
-          with:
-            context: .
-            push: true
-            platforms: linux/arm64, linux/amd64
-            tags: ghcr.io/${{ github.repository_owner }}/tipimate:${{ needs.get-tag.outputs.tag }}, ghcr.io/${{ github.repository_owner }}/tipimate:latest
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-linux-amd64
+          path: ${{ runner.temp }}/digests/*
+          if-no-files-found: error
+          retention-days: 1
 
-    release:
-        needs: [get-tag, build, build-docker]
-        runs-on: ubuntu-latest
-        steps:
-            - name: Download artifacts
-              uses: actions/download-artifact@v4
-              with:
-                pattern: tipimate-*
-                path: binaries
-                merge-multiple: true
+  build-arm:
+    runs-on: ubuntu-24.04-arm
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
 
-            - name: Create release
-              uses: softprops/action-gh-release@v2
-              with:
-                prerelease: false
-                make_latest: false
-                tag_name: ${{ needs.get-tag.outputs.tag }}
-                files: binaries/*
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/tipimate
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Build and push
+        uses: docker/build-push-action@v6
+        id: build
+        with:
+          platforms: linux/arm64
+          labels: ${{ steps.meta.outputs.labels }}
+          tags: ghcr.io/${{ github.repository_owner }}/tipimate
+          outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+
+      - name: Export digest
+        run: |
+          mkdir -p ${{ runner.temp }}/digests
+          digest="${{ steps.build.outputs.digest }}"
+          touch "${{ runner.temp }}/digests/${digest#sha256:}"
+
+      - name: Upload digest
+        uses: actions/upload-artifact@v4
+        with:
+          name: digests-linux-arm64
+          path: ${{ runner.temp }}/digests/*
+          if-no-files-found: error
+          retention-days: 1
+
+  merge:
+    runs-on: ubuntu-latest
+    needs:
+      - build
+      - build-arm
+    steps:
+      - name: Download digests
+        uses: actions/download-artifact@v4
+        with:
+          path: ${{ runner.temp }}/digests
+          pattern: digests-*
+          merge-multiple: true
+
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ghcr.io/${{ github.repository_owner }}/tipimate
+          tags: |
+            type=semver,pattern=v{{version}}
+            type=semver,pattern=v{{major}}
+            type=semver,pattern=v{{major}}.{{minor}}
+
+      - name: Create manifest list and push
+        working-directory: ${{ runner.temp }}/digests
+        run: |
+          docker buildx imagetools create $(jq -cr '.tags | map("-t " + .) | join(" ")' <<< "$DOCKER_METADATA_OUTPUT_JSON") \
+            $(printf 'ghcr.io/${{ github.repository_owner }}/tipimate@sha256:%s ' *)
