--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -24,7 +24,7 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: tipimate-linux-amd64
-          path: tipimate-linux-arm64
+          path: tipimate-linux-amd64
 
   build-arm-cli:
     runs-on: ubuntu-24.04-arm
