--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -191,5 +191,5 @@ jobs:
       - name: Create release
         uses: softprops/action-gh-release@v2
         with:
-          tag_name: ${{ github.head_ref }}
+          tag_name: ${{ github.ref_name }}
           files: binaries/*
