--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -165,9 +165,9 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/tipimate
           tags: |
-            type=semver,pattern={{raw}}
-            type=semver,pattern=v{{major}}
-            type=semver,pattern=v{{major}}.{{minor}}
+            type=semver,pattern={{version}},prefix=v
+            type=semver,pattern={{major}},prefix=v
+            type=semver,pattern={{major}}.{{minor}},prefix=v
 
       - name: Create manifest list and push
         working-directory: ${{ runner.temp }}/digests
