refactor: adapt tipimate for runtipi v4

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-NOTIFY_URL=your-discord-token
-RUNTIPI=runtipi-server-url
-JWT_SECRET=your-jwt-secret
-APPSTORE=https://github.com/runtipi/runtipi-appstore
-DB_PATH=/data/tipimate.db
-REFRESH=30
+TIPIMATE_NOTIFICATION_URL=some_shoutrrr_url
+TIPIMATE_RUNTIPI_URL=https://localhost
+TIPIMATE_JWT_SECRET=your_jwt_secret
+TIPIMATE_DATABASE_PATH=tipimate.db
+TIPIMATE_INTERVAL=30
+TIPIMATE_LOG_LEVEL=info
+TIPIMATE_INSECURE=false
