--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,10 +15,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.23
+          go-version: ^1.23.2
 
       - name: Build
-        run: CGO_ENABLED=0 go build -o tipimate-linux-amd64 -ldflags "-s -w"
+        run: go build -ldflags "-s -w -X tipimate/internal/constants.Version=${{ github.ref_name }}" -o tipimate-linux-amd64
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -35,10 +35,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v2
         with:
-          go-version: 1.23
+          go-version: ^1.23.2
 
       - name: Build
-        run: CGO_ENABLED=0 go build -o tipimate-linux-arm64 -ldflags "-s -w"
+        run: go build -ldflags "-s -w -X tipimate/internal/constants.Version=${{ github.ref_name }}" -o tipimate-linux-arm64
 
       - name: Upload artifact
         uses: actions/upload-artifact@v4
@@ -46,7 +46,7 @@ jobs:
           name: tipimate-linux-arm64
           path: tipimate-linux-arm64
 
-  build:
+  build-image:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -76,6 +76,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: ghcr.io/${{ github.repository_owner }}/tipimate
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+          build-args: |
+            VERSION=${{ github.ref_name }}
 
       - name: Export digest
         run: |
@@ -91,7 +93,7 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  build-arm:
+  build-image-arm:
     runs-on: ubuntu-24.04-arm
     steps:
       - name: Checkout
@@ -121,6 +123,8 @@ jobs:
           labels: ${{ steps.meta.outputs.labels }}
           tags: ghcr.io/${{ github.repository_owner }}/tipimate
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
+          build-args: |
+            VERSION=${{ github.ref_name }}
 
       - name: Export digest
         run: |
@@ -136,11 +140,11 @@ jobs:
           if-no-files-found: error
           retention-days: 1
 
-  merge:
+  image-merge:
     runs-on: ubuntu-latest
     needs:
-      - build
-      - build-arm
+      - build-image
+      - build-image-arm
     steps:
       - name: Download digests
         uses: actions/download-artifact@v4
