--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 services:
   tipimate:
-    image: ghcr.io/steveiliop56/tipimate:v1
-    container_name: tipimate
+    image: ghcr.io/steveiliop56/tipimate:v2
     restart: unless-stopped
     volumes:
       - ./data:/data
     environment:
-      - NOTIFY_URL=your-discord-token
-      - RUNTIPI=runtipi-server-url
-      - JWT_SECRET=your-jwt-secret
-      - APPSTORE=https://github.com/runtipi/runtipi-appstore
-      - DB_PATH=/data/tipimate.db
-      - REFRESH=30
+      - TIPIMATE_NOTIFICATION_URL=some_shoutrrr_url
+      - TIPIMATE_RUNTIPI_URL=https://localhost
+      - TIPIMATE_JWT_SECRET=your_jwt_secret
+      - TIPIMATE_DATABASE_PATH=/data/tipimate.db
+      - TIPIMATE_INTERVAL=30
+      - TIPIMATE_LOG_LEVEL=info
+      - TIPIMATE_INSECURE=false
