--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -77,7 +77,7 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/tipimate
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
           build-args: |
-            VERSION=${{ github.ref_name }}
+            TIPIMATE_VERSION=${{ github.ref_name }}
 
       - name: Export digest
         run: |
@@ -124,7 +124,7 @@ jobs:
           tags: ghcr.io/${{ github.repository_owner }}/tipimate
           outputs: type=image,push-by-digest=true,name-canonical=true,push=true
           build-args: |
-            VERSION=${{ github.ref_name }}
+            TIPIMATE_VERSION=${{ github.ref_name }}
 
       - name: Export digest
         run: |
