--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -17,6 +17,9 @@ jobs:
         with:
           go-version: ^1.23.2
 
+      - name: Download dependencies
+        run: go mod download
+
       - name: Build
         run: go build -ldflags "-s -w -X tipimate/internal/constants.Version=${{ github.ref_name }}" -o tipimate-linux-amd64
 
@@ -36,6 +39,9 @@ jobs:
         uses: actions/setup-go@v2
         with:
           go-version: ^1.23.2
+
+      - name: Download dependencies
+        run: go mod download
 
       - name: Build
         run: go build -ldflags "-s -w -X tipimate/internal/constants.Version=${{ github.ref_name }}" -o tipimate-linux-arm64
