refactor: use raw sql migrations

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ TIPIMATE_DATABASE_PATH=tipimate.db
 TIPIMATE_INTERVAL=30
 TIPIMATE_LOG_LEVEL=info
 TIPIMATE_INSECURE=false
+TIPIMATE_SERVER_NAME=Tipimate
