--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,3 +12,4 @@ services:
       - TIPIMATE_INTERVAL=30
       - TIPIMATE_LOG_LEVEL=info
       - TIPIMATE_INSECURE=false
+      - TIPIMATE_SERVER_NAME=Tipimate
